--- a/src/scss/prototypes/partials/posts.scss
+++ b/src/scss/prototypes/partials/posts.scss
@@ -1,6 +1,5 @@
 .posts {
-  //@extend %grid-container;
-  @extend %container;
+  @extend %flex-container;
 }
 .post {
   @include col(6);
